--- a/_posts/2019-12-21-27Lessons.md
+++ b/_posts/2019-12-21-27Lessons.md
@@ -14,7 +14,7 @@ title: 提前启用 Shadowsword's Bw，几句话要写出来
 然而毕竟这个东西的适用范围，没我想象中那么广。
 
 我依然会尝试着去设身处地地去理解别人，即便我没有必要理解一个我见都没见过的人。
-我依然会偶尔越界，插手我在乎的人的生活。虽然我知道 *Open-Close* 原则。
+我依然会偶尔越界，插手我在乎的人的生活。虽然我知道 *Open-Closed* 原则。
 
 在这方面我只有一个字形容自己：傻。傻到自己嫌弃自己。
 
